# ChangeLog for app-vim/tt2-syntax
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-vim/tt2-syntax/ChangeLog,v 1.2 2008/10/04 01:33:06 darkside Exp $

  04 Oct 2008; Jeremy Olexa <darkside@gentoo.org> tt2-syntax-1.13.ebuild:
  add ~amd64 kw, bug #226149

*tt2-syntax-1.13 (06 Sep 2007)

  06 Sep 2007; Ali Polatel <hawking@gentoo.org> +metadata.xml,
  +tt2-syntax-1.13.ebuild:
  Initial commit.
