@@ -1,13 +1,13 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-vim/tt2-syntax/tt2-syntax-1.13.ebuild,v 1.3 2008/10/04 01:33:06 darkside Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-vim/tt2-syntax/tt2-syntax-1.13.ebuild,v 1.4 2009/09/29 17:15:31 armin76 Exp $
 
 inherit vim-plugin
 
 DESCRIPTION="vim plugin: syntax highlighting for perl module Template-Toolkit"
 HOMEPAGE="http://www.vim.org/scripts/script.php?script_id=830"
 LICENSE="vim"
-KEYWORDS="~amd64 ~x86"
+KEYWORDS="~alpha ~amd64 ~ia64 ~sparc ~x86"
 IUSE=""
 
 VIM_PLUGIN_HELPTEXT=\
